--- a/PEC7/PEC7_Ej_Prac/ecommerce/src/app/navbar/navbar.component.html
+++ b/PEC7/PEC7_Ej_Prac/ecommerce/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav>
   <ul>
-    <li><a routerLink="/">Inicio</a></li>
-    <li><a routerLink="/articulos">Artículos</a></li>
-    <li><a routerLink="/template">Nuevo artículo template</a></li>
-    <li><a routerLink="/reactive">Nuevo artículo reactivo</a></li>
+    <li><a routerLink="/login">Iniciar sesión</a></li>
+    <li><a routerLink="/register">Registrar usuario</a></li>
+    <li><a routerLink="/article/list">Artículos</a></li>
+    <li><a routerLink="/article/create">Crear Artículo</a></li>
   </ul>
 </nav>
