--- a/PEC7/PEC7_Ej_Prac/ecommerce/src/app/register/register.component.html
+++ b/PEC7/PEC7_Ej_Prac/ecommerce/src/app/register/register.component.html
@@ -13,6 +13,6 @@
                placeholder="Password"
                formControlName="password">
         </div>
-        <button>Submit</button>
+        <button>Register</button>
     </form>
 </div>
