--- a/PEC7/PEC7_Ej_Prac/ecommerce/src/app/article-item/article-item.component.html
+++ b/PEC7/PEC7_Ej_Prac/ecommerce/src/app/article-item/article-item.component.html
@@ -2,7 +2,7 @@
     <div class="name">
         <h3>{{article.name}}</h3>
     </div>
-    <div class="image"><img src="../{{article.imageUrl | defaultPhoto}}"></div>
+    <div class="image"><img src="../{{article.imageUrl | defaultPhoto}}" routerLink="/article/{{article.id}}"></div>
     <div class="price" [ngClass]="priceClasses">{{article.price | formatPrice}}</div>
     <div class="quantity" *ngIf="article.isOnSale">
         <button class="minus" (click)="onChangeQuantity($event, -1)">-</button>
