--- a/PEC7/PEC7_Ej_Prac/ecommerce/src/app/navbar/navbar.component.html
+++ b/PEC7/PEC7_Ej_Prac/ecommerce/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav>
   <ul>
-    <li><a routerLink="/login" routerLinkActive="active">Iniciar sesión</a></li>
-    <li><a routerLink="/register" routerLinkActive="active">Registrar usuario</a></li>
+    <li><a routerLink="/user/login" routerLinkActive="active">Iniciar sesión</a></li>
+    <li><a routerLink="/user/register" routerLinkActive="active">Registrar usuario</a></li>
     <li><a routerLink="/article/list" routerLinkActive="active">Artículos</a></li>
     <li><a routerLink="/article/create" routerLinkActive="active">Crear Artículo</a></li>
   </ul>
